nav hover, h3 text

--- a/code/index.html
+++ b/code/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;700&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <header class="header">
       <img class="logo" src="./logoblue.png" alt="Dish" />
       <img class="site-name" src="./redname.png" alt="Name" />
-
-      <!-- <span><h1>very important news</h1></span> -->
 
       <nav class="navigation">
         <a href="#">Home</a>
@@ -37,56 +38,56 @@
       <section class="small-box">
 
       <img src="./news.jpg" alt="News">
-      <h3>Yes this is a header for this</h3>
+      <h3>Safety meeting ends in accident</h3>
 
       </section>
 
       <section class="small-box">
 
         <img src="./update.jpg" alt="update">
-        <h3>Yes this is a header for this</h3>
+        <h3>Police raid gun shop, find weapons</h3>
         
       </section>
 
       <section class="small-box">
 
         <img src="./year.jpg" alt="year">
-        <h3>Yes this is a header for this</h3>
+        <h3>Voters to vote on whether to vote</h3>
 
         </section>
 
       <section class="small-box">
 
         <img src="./news.jpg" alt="news">
-        <h3>Yes this is a header for this</h3>
+        <h3>Goat accused of robbery</h3>
 
         </section>
 
       <section class="small-box">
 
         <img src="./update.jpg" alt="update">
-        <h3>Yes this is a header for this</h3>
+        <h3>Bugs flying around with wings are flying bugs</h3>
 
         </section>
 
       <section class="small-box">
 
         <img src="./year.jpg" alt="year">
-        <h3>Yes this is a header for this</h3>
+        <h3>Attorney accidentally sues himself</h3>
 
         </section>
 
       <section class="small-box">
 
         <img src="./news.jpg" alt="news">
-        <h3>Yes this is a header for this</h3>
+        <h3>Bridge closure date, Thursday or October</h3>
 
         </section>
 
       <section class="small-box">
 
         <img src="./update.jpg" alt="year">
-        <h3>Yes this is a header for this</h3>
+        <h3>Thursday is Cancelled</h3>
 
         </section>
     
