update readme and footer

--- a/code/index.html
+++ b/code/index.html
@@ -54,6 +54,7 @@
 
             <footer>
                 <h5>Responsive made by Jakob Lindstrom</h5>
+                <img class="logo" src="./nbnlogo2.png" alt="logo">
             </footer>     
         </main>
     </body>
