Added moore commemnts

--- a/code/index.html
+++ b/code/index.html
@@ -95,7 +95,7 @@
 
 
   </div>
-  <!-- Added a footer with credit given to the illustrator -->
+  <!-- Added a footer with links to social media pages -->
   <footer>
     <div class="social-media">
       <a href="#">
@@ -112,6 +112,7 @@
       </a>
     </div>
   </footer>
+    <!-- Credit to the illustrator of Small Town News image -->
   <a class="credit-link" href="https://sv.vecteezy.com/gratis-vektor/bakgrund">Logo illustration by Vecteezy</a>
 
 </body>
