Changed filenames, corrected README

--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section class="big-news">
-    <img class="big-news-image" src="./assets/Redhead.jpg" alt="Red" />
+    <img class="big-news-image" src="./assets/redhead.jpg" alt="big-news" />
     <div class="big-news-text">
       <h2>“It´s hard to make speeches with hair in your face”.</h2>
       <p>
@@ -35,7 +35,7 @@
 
   <section class="grid-container">
     <div class="grid-item">
-      <img class="grid-image" src="./assets/HairBlow1.jpg" alt="1" />
+      <img class="grid-image" src="./assets/hair-blow1.jpg" alt="1" />
       <div class="grid-text">
         <h2>Nice With Some Privacy</h2>
         <p>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="grid-item">
-      <img class="grid-image" src="./assets/HairBlow3.jpg" alt="3" />
+      <img class="grid-image" src="./assets/hair-blow3.jpg" alt="2" />
       <div class="grid-text">
         <h2>Windy day in august</h2>
         <p>
@@ -56,7 +56,7 @@
     </div>
 
     <div class="grid-item">
-      <img class="grid-image" src="./assets/HairBlow2.jpg" alt="2" />
+      <img class="grid-image" src="./assets/hair-blow2.jpg" alt="3" />
       <div class="grid-text">
         <h2>Can´t See Much</h2>
         <p>
