--- a/code/index.html
+++ b/code/index.html
@@ -37,7 +37,7 @@
     <div class="grid-item">
       <img class="grid-image" src="./assets/hair-blow1.jpg" alt="1" />
       <div class="grid-text">
-        <h2>Nice With Some Privacy</h2>
+        <h2>It´s Nice With Some Privacy</h2>
         <p>
           Sometimes I hide myself away just to see if I am worth looking for. 
         </p>
@@ -48,7 +48,7 @@
     <div class="grid-item">
       <img class="grid-image" src="./assets/hair-blow3.jpg" alt="2" />
       <div class="grid-text">
-        <h2>Windy day in august</h2>
+        <h2>Windy Day in August</h2>
         <p>
           My schampoo tastes bad, but at least it smells good. 
         </p>
@@ -58,7 +58,7 @@
     <div class="grid-item">
       <img class="grid-image" src="./assets/hair-blow2.jpg" alt="3" />
       <div class="grid-text">
-        <h2>Can´t See Much</h2>
+        <h2>Can´t Really See Much</h2>
         <p>
           We are only as blind as we want to be.
         </p>
