add box-sizing big img

--- a/code/index.html
+++ b/code/index.html
@@ -123,7 +123,7 @@
 
       <div class="small-news-container"> <img class="small-news-img" src="wimbledon_main.jpg" alt="Wimbeldon by Ernst de Geer" />
         <div class="category-bottom">
-          <p>Persons of Interest</p>
+          <p>Person of Interest</p>
       </div><h4>Ernst De Geer</h4><p class="small-news-text">Ernst De Geer (b. 1989) is an up and coming writer/director lauded for his stylistic short films, and currently directing his first full length feature, Hypnosen.</p>
         
           <p class="small-news-text"> His most recent short film, Wimbledon, premiered at Bergen International Film Festival 2019 and was nominated for ‘Best Norwegian Short Film’.</p>
