final layout. changed the layout a bit and managed to fix responsiveness and center alignment of the image and text.

--- a/code/index.html
+++ b/code/index.html
@@ -22,57 +22,60 @@
     </header>
 
       <section class="big-news">
-          <img class="big-news-image" src="https://picsum.photos/500/290" alt="headline article">
+        <article class="big-news-article">
+          <div class="image-container"><img class="big-news-image" src="https://images.unsplash.com/photo-1617719787657-81dd0ec1d3ce?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDJ8Sjl5clBhSFhSUVl8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="headline article">
+          </div>
           <div class="big-news-text">   
-            <p><h1 class="headline"> This will be the big headline</h1> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
+            <p class="text"><h1 class="headline"> This will be the big headline</h1> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div></div>
+      </article>
       </section>
 
       <section class="grid-container">
 
-      <div class="first-small-news">
+      <div class="small-news">
       <img class="small-image" src="https://images.unsplash.com/photo-1573165067541-4cd6d9837902?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8d29tZW4lMjBpbiUyMHRlY2h8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="random picture"> 
       <h3>Diversity in the tech industry</h3>  
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
 
-      <div class="second-small-news">
+      <div class="small-news">
         <img class="small-image" src="https://images.unsplash.com/photo-1618709023545-07a130f4351e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTd8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="random pic"> 
         <h3>To be at the right side of history</h3>  
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
 
-      <div class="third-small-news">
+      <div class="small-news">
         <img class="small-image" src="https://www.nydailynews.com/resizer/rhoPNiOMbLNgx_cow9at5jrykAU=/415x276/top/arc-anglerfish-arc2-prod-tronc.s3.amazonaws.com/public/VZWRIX5QWCBCAIYPVBZ2VYSKZY.jpg" alt="random picture"> 
         <h3>cultivate a healthy yoga practice</h3>  
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
 
-      <div class="fourth-small-news">
+      <div class="small-news">
         <img class="small-image" src="https://images.unsplash.com/photo-1541544741938-0af808871cc0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NzB8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="random picture"> 
         <h3>make  time for food</h3>  
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class=text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
 
-      <div class="fifth-small-news">
+      <div class="small-news">
         <img class="small-image" src="https://images.unsplash.com/photo-1503862242163-608ef852091d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8OTR8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="random picture"> 
         <h3>Total eclipse of our hearts</h3>  
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
 
-      <div class="sixth-small-news">
+      <div class="small-news">
         <img class="small-image" src="https://images.unsplash.com/photo-1610658557403-4e0cbb8edf9a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MzF8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="random picture"> 
         <h3>How to make new friends as an adult</h3>  
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 
-        <div class="seventh-small-news">
+        <div class="small-news">
           <img class="small-image" src="https://images.unsplash.com/photo-1592598264624-61eb71e49d7a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTAzfHxwcmlkZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="random picture"> <h3>Pride always</h3>  
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 
-          <div class="eighth-small-news">
+          <div class="small-news">
             <img class="small-image" src="https://images.unsplash.com/photo-1493794179168-82ca7cb00437?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTMyfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60" alt="random picture"> 
             <h3>How to find yourself in a big city</h3>  
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
       
       </section>
     
