change big img size

--- a/code/index.html
+++ b/code/index.html
@@ -34,14 +34,14 @@
   
     <section class="big-news-wrapper">
       <div class="big-news-container">
-        <!-- <div class="img-and-text-container"> -->
+        <div class="img-and-text-container">
     <img  
         class="big-news-img"
         src="elliott-high-res-2.jpg"
         alt="Picture by Angelica Elliott"
       />
-      <!-- <p class="img-text">From the series Rågsved © Angelica Elliott.</p>
-    </div> -->
+      <p class="img-text">From the series Rågsved © Angelica Elliott.</p>
+    </div>
       <div class="big-news-text">
         <div class="category-top">
           <h4 class="category">Photography</h4>
