New logo and colors plus favicon

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>WWN</title>
+    <link rel="icon" href="./new_logo.png" type="image" sizes="any">
 </head>
 <body>
   <section class="full-container">
@@ -59,27 +60,39 @@
 
   <div class="body-section-grid">
 
-    <div class="smallnews-grid1">
+    <div class="smallnews-grid">
       <h3>The viral Cat God</h3>
       <img src="./Smallnews1.jpeg"/>
+      <div class="middle">
+        <p class="cred">VIA CLOUDCAT28/TWITTER.COM</p>
+      </div>
       <p>Clyde, a fluffy white kitty, went viral on Twitter when his owner, Amanda Hyslop, posted a photo she’d taken of him. By chance, she’d managed to catch his reflection perfectly in the window while photographing clouds, making it appear that the cloud-like cat had ascended to his rightful throne in the sky...</p>
     </div>
       
-    <div class="smallnews-grid2">
+    <div class="smallnews-grid">
       <h3>Toxic parrots are a huge problem</h3>
       <img src="./smallnews2.jpg"/>
+      <div class="middle">
+      <p class="cred">VIA LINCSWILDLIFEPARK/INSTAGRAM.COM</p>
+      </div>
       <p>Five African grey parrots—Billy, Eric, Tyson, Jade, and Elsie—recently had to be separated for “encouraging each other to swear” at patrons at the Lincolnshire Wildlife Center in the U.K. “We are quite used to parrots swearing, but we’ve never had five at the same time, and for some reason these five relish it,” Steve Nichols, the zoo’s chief executive, told the AP.</p>
     </div>
 
-    <div class="smallnews-grid3">
+    <div class="smallnews-grid">
       <h3>Magawa is a honorable rat</h3>
       <img src="./smallnews3.jpg"/>
+      <div class="middle">
+        <p class="cred">VIA TEAMPDSA/INSTAGRAM.COM</p>
+      </div>
       <p>When British charity PDSA announced the winner of the Gold Medal, its top civilian award, people were surprised—mostly because the winner wasn’t a person at all, but a giant African pouched rat. Magawa was awarded the high honor for his diligent work searching out unexploded land mines in Cambodia. </p>
     </div>
 
-    <div class="smallnews-grid4">
+    <div class="smallnews-grid">
       <h3>Burgler monkey took selfies</h3>
       <img src="./smallnews4.jpg"/>
+      <div class="middle">
+      <p class="cred">VIA ZACKRYDZ RODZI/FACEBOOK.COM</p>
+    </div>
       <p>A Malaysian man says he found monkey selfies and videos on his missing phone a day after retrieving it in the jungle behind his house.
 
         The content - including footage of a monkey that appears to be trying to eat the phone - has been widely shared on social media since Zackrydz Rodzi posted it on Twitter.</p>
