--- a/code/index.html
+++ b/code/index.html
@@ -57,7 +57,7 @@
     <section class="small-news">
       <div class="card">
         <h3>BREAKFAST CLUB</h3>
-        <img src="./Pictures/breakfast.jpeg" />
+        <img src="./Pictures/Croissant-picture.jpeg" />
         <p>
           We have now a fresh menu for you, starting next week! Each month, we
           will serve you inspiring talks and activities.<br> To find out more go to
@@ -70,7 +70,7 @@
 
       <div class="card">
         <h3>TRIP TO MARS</h3>
-        <img src="./Pictures/Mars.jpeg" />
+        <img src="./Pictures/Mars-picture.jpeg" />
         <p>
           We are giving away 2 tickets for going to Mars! <br> To find out more go to
           <a
@@ -83,7 +83,7 @@
 
       <div class="card">
         <h3>VOLUNTEERING ROLES</h3>
-        <img src="./Pictures/Volunteering.jpeg" />
+        <img src="./Pictures/Hands-picture.jpeg" />
         <p>
           We have oppend a community kitchen for all those in need so we need some help! Volunteer with us! <br> To find out more go to
           <a
@@ -95,7 +95,7 @@
 
       <div class="card">
         <h3>BILLIE EILISH  </h3>
-        <img src="./Pictures/Billie Eilish.jpeg" />
+        <img src="./Pictures/Billie-Eilish-picture.jpeg" />
         <p>The singer and songwriter Billie Eilish wants to take a step into programming and has joined Technigo Bootcamp.
         </p>
       </div>
