added some small details

--- a/code/index.html
+++ b/code/index.html
@@ -20,14 +20,13 @@
       </nav>
     </header>
 
-    <!--NEWS CONTENT--> 
-    <main class="big-news">
-        <section class="news">
+    <!--NEWS CONTENT-->
+      <main class="big-news">
 
-          <h1 class="latest-news-title">LATEST NEWS</h1>
-          <article class="text-container">
+        <section class="news">
+            <h1 class="latest-news-title">LATEST NEWS</h1>
             <img class="big-news-image" src="./img/ps.jpeg" alt="big-news">
-            <div class="container">
+            <article class="text-container">
               <h1 class="big-news-title">What's new in gaming?</h1>
               <p class="big-news-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                   Tempore, exercitationem aut non quis ut aspernatur aliquid, 
@@ -35,11 +34,9 @@
                   dolore ab porro ducimus est, nihil soluta asperiores. 
                   Ab, tenetur unde temporibus dolore facilis deserunt delectus nesciunt ipsam error. 
                   Quae non velit at vero earum?<br><br>
-                  
                   <a>Read more</a>
               </p>
-            </div>
-
+              <p class="little-title">By Sven Svensson 7 minutes ago</p>
           </article>
         </section>
       </main>
@@ -57,6 +54,7 @@
             saepe consequuntur.
             <a>Read more</a>
           </p>
+          <p class="little-title">By Sven Svensson 55 minutes ago</p>
         </article>
 
         <article class="news-card">
@@ -67,6 +65,7 @@
             saepe consequuntur.
             <a>Read more</a>
           </p>
+          <p class="little-title">By Richard Axelsson 3 hours ago</p>
         </article>
 
         <article class="news-card">
@@ -77,6 +76,7 @@
             saepe consequuntur.
             <a>Read more</a>
           </p>
+          <p class="little-title">By Anne Clakson 5 hours ago</p>
         </article>
 
         <article class="news-card">
@@ -87,6 +87,7 @@
             saepe consequuntur.
             <a>Read more</a>
           </p>
+          <p class="little-title">By Bo Ohlsson 12 hours ago</p>
         </article>
         <article class="news-card">
           <img class="other-news-image" src="./img/other-news.jpeg" alt="news-image">
@@ -96,6 +97,7 @@
             saepe consequuntur.
             <a>Read more</a>
           </p>
+          <p class="little-title">By Richard Axelsson 1 day ago</p>
         </article>
 
       </section>
