github link added and bgc changed

--- a/code/index.html
+++ b/code/index.html
@@ -123,7 +123,7 @@
 
   <!-- Footer section   -->
   <footer>
-    <p class="footer-info"> © 2021 Pınar Demirel Etli 🦊 </p>
+    <p class="footer-info"> © 2021 Pınar Demirel Etli <a href="https://github.com/pdetli"> <i class="fa fa-github" style="font-size:24px"></i> </a> </p>
     <p class="footer-info">This page was made as a student project during the <a
         href="https://www.technigo.io/">Technigo </a> Boot Camp.</p>
   </footer>
