--- a/code/index.html
+++ b/code/index.html
@@ -131,38 +131,38 @@
         
           <p class="small-news-text"> His most recent short film, Wimbledon, premiered at Bergen International Film Festival 2019 and was nominated for ‘Best Norwegian Short Film’.</p></a></div> 
 
-      <div class="small-news-container"> <img src="jenny-fabric.JPG" alt="Fabric by Jenny Söderbäck" /><div class="category-bottom">
+      <div class="small-news-container"> <img class="small-news-img" src="jenny-fabric.JPG" alt="Fabric by Jenny Söderbäck" /><div class="category-bottom">
         <p>Art</p>
     </div><a class="small-news-link" href="https://mandel.gart.nz/" target="_blank"><h4>Jenny Söderbäck - A Retrospective</h4><p class="small-news-text">This is the first major museum exhibition devoted to the full scope of the career of Jenny Söderbäck, widely considered to be among the most important and prolific artists of the 20th century. The exhibition, which will only be seen at MoMA, presents an unparalleled opportunity to study the artist’s development over nearly a decade.</p></a></div> 
 
-      <div class="small-news-container"> <img src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><div class="category-bottom">
+      <div class="small-news-container"> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><div class="category-bottom">
         <p>Music</p>
     </div><a class="small-news-link" href="http://smarturl.it/SuggestiveListening" target="_blank"><h4>Ulrika Spacek Live Session</h4><p class="small-news-text">Live session from New York recorded October ’18. ‘No. 1 Hum’ & ‘Wave to Paulo, he’s not there’ recorded live to Tascam 388 8 track tape. Engineered and Mixed by Vincent Hivert. Filmed by Rudi Doombar & Andrew Rayner. Edited by Pierre Bouvier Patron. </p>
   <p class="small-news-text">Both songs feature on ’Suggestive Listening’ E.P. released this time last year.</p></a></div>
 
   
       <div class="small-news-container"> 
-        <img src="sara-banda.png" alt="Sara Olsson" /><div class="category-bottom">
+        <img class="small-news-img" src="sara-banda.png" alt="Sara Olsson" /><div class="category-bottom">
           <p>Podcast</p>
       </div><a class="small-news-link" href="https://podme.com/se/dubbelliv" target="_blank"><h4>Sara Olsson's new release on Banda</h4><p class="small-news-text">Sara is working on a new documentary series for PodMe and the third season of Unresolved for Spotify. On Banda, she has also made a documentary for Ufopodden in P3. She has previously done P3 Documentaries, P4 Documentaries and worked as a reporter for Reality in P3. Sara is educated at Stockholm's Dramatic University's radio line and has produced soundwalks for the Park Theater and the City Museum.</p>
     <p class="small-news-text">Listen to Sara's latest release on pod.me.</p></a></div> 
 
     
 
-      <div class="small-news-container"> <img src="prygla.jpg" alt="Pryla Cover" /><div class="category-bottom">
+      <div class="small-news-container"> <img class="small-news-img" src="prygla.jpg" alt="Pryla Cover" /><div class="category-bottom">
         <p>Music</p>
     </div><a class="small-news-link" href="https://prygla.bandcamp.com/album/prygla" target="_blank"><h4>Prygla realeases debut album "Prygla"</h4><p class="small-news-text">Swedish black metal band Prygla releases new debut album on bandcamp. Check it out!</p></a></div> 
 
-      <div class="small-news-container"> <img src="the-baxters.jpeg" alt="The Baxter Twins" /><div class="category-bottom">
+      <div class="small-news-container"> <img class="small-news-img" src="the-baxters.jpeg" alt="The Baxter Twins" /><div class="category-bottom">
         <p>Café</p>
     </div><a class="small-news-link" href="https://www.mitti.se/nyheter/tvillingar-fran-liverpool-oppnade-kafe-pa-asen/repuhm!AW1zVXnlHbaMOPMGutz8Q/" target="_blank"><h4>The Baxter Twins opens up café in Hägerstensåsen</h4><p class="small-news-text">Hägerstensåsen has got a new café, right by the metro. The twins Fran and Martin Baxter hope that Slow Hands Café will be a meeting place for the people of Åsen.</p>
     <p class="small-news-text">(Article in Swedish).</p></a></div>
 
-      <div class="small-news-container"> <img src="sikta-med-fittan.jpg" alt="Sikta med fittan" /><div class="category-bottom">
+      <div class="small-news-container"> <img class="small-news-img" src="sikta-med-fittan.jpg" alt="Sikta med fittan" /><div class="category-bottom">
         <p>Music</p>
     </div><a class="small-news-link" href="https://von-goose.com/scriptwave/" target="_blank"><h4>Reunion for Sikta med fittan?</h4><p class="small-news-text">Believe it or not, it's been a massive 10 years since Sikta med fittan formed during one weekend long bender, turning Lovisa Falkenmark, Sara Olsson, Jenny Söderbäck, Emelie Söderhielm and Angelica Elliott into overnight stars.</p><p class="small-news-text">Despite the Coronavirus pandemic causing havoc across the world, the girls have still been keeping fans on their toes, dropping some not so subtle hints over the last few months.</p></a></div> 
 
-      <div class="small-news-container"> <img src="wine-trade.jpg" alt="Wine Trade Wine Bar" /><div class="category-bottom">
+      <div class="small-news-container"> <img class="small-news-img" src="wine-trade.jpg" alt="Wine Trade Wine Bar" /><div class="category-bottom">
         <p>Wine</p>
     </div><a class="small-news-link" href="https://whiteguide.com/se/sv/news/3514-kontoret-blir-vinbar-nar-wine-trade-oppnar-bar-ninja" target="_blank"><h4>Wine Trade office becomes wine bar</h4><p class="small-news-text">In October, the natural wine importer Wine Trade opens its own wine bar on Södermalm. At Bar Ninja, only organic and sustainable wine will be served - and there will also be room for wines from other importers.</p>
   <p class="small-news-text">(Article in Swedish)</p></a></div> 
