--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/59fae56e7e.js" crossorigin="anonymous"></script>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
@@ -168,8 +169,14 @@
   <p class="small-news-text">(Article in Swedish)</p></a></div> 
       </section>
 
-      <footer class="footer">
-<p class="footer-text">Created by: Emelie, team 🐘 august 2021</p>
+      <footer>
+<p>Created by: Emelie Söderhielm 🐘 august 2021</p>
+<nav class="navigation">
+  <a href="https://www.linkedin.com/in/emelie-s%C3%B6derhielm-14105121a/"><i class="fab fa-linkedin fa-2x"></i></a>
+  <a href="https://github.com/intehon"><i class="fab fa-github fa-2x"></i></a>
+  <a href="mailto:intehon@gmail.com"><i class="far fa-paper-plane fa-2x"></i></a>
+  
+</nav>
       </footer>
     <!-- <section class="small-news">
       <img class="small-news-img" src="#" />
