--- a/code/index.html
+++ b/code/index.html
@@ -170,7 +170,7 @@
       </section>
 
       <footer>
-<p>Created by: Emelie Söderhielm 🐘 august 2021</p>
+        <img class="footer-logo" src="logo_transparent.png" alt="Inte Hon Logo">
 <nav class="navigation">
   <a href="https://www.linkedin.com/in/emelie-s%C3%B6derhielm-14105121a/"><i class="fab fa-linkedin fa-2x"></i></a>
   <a href="https://github.com/intehon"><i class="fab fa-github fa-2x"></i></a>
