--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
           <ul>
             <li><a href="#big-news-id">Big News</a></li>
             <li><a href="#small-news-id">Small News</a></li>
-            <li><a href="mailto: contact@genericnews.mail" target="_blank">Contact</a></li>
+            <li><a href="mailto: contact@genericnews.no.real.mail" target="_blank">Contact</a></li>
           </ul>
         </div>
       </nav>
